--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <p><a href="./Project%201/Subject/TP1.pdf">Subject</a></p>
 
-<p><a href="./Project%201/Source/">Source</a></p>
+<p><a href="https://github.com/CelestinV/NF16-Toy-Library-and-Text-Indexing/tree/master/Project%201/Source">Source</a></p>
 
 <h2></h2>
 
@@ -78,7 +78,7 @@
 
 <p><a href="./Project%202/Subject/TP2.pdf">Subject</a></p>
 
-<p><a href="./Project%202/Source/">Source</a></p>
+<p><a href="https://github.com/CelestinV/NF16-Toy-Library-and-Text-Indexing/tree/master/Project%202/Source">Source</a></p>
 
 <h2></h2>
 
@@ -93,7 +93,7 @@
 
 <p><a href="./Project%203/Subject/NF16_TP3.pdf">Subject</a></p>
 
-<p><a href="./Project%203/Source/">Source</a></p>
+<p><a href="https://github.com/CelestinV/NF16-Toy-Library-and-Text-Indexing/tree/master/Project%203/Source">Source</a></p>
 
 <p><a href="./Project%203/Report/RapportTP3_MATHEY_VALLOIS.pdf">Report</a></p>
 
@@ -110,7 +110,7 @@
 
 <p><a href="./Project%204/Subject/NF16_TP4.pdf">Subject</a></p>
 
-<p><a href="./Project%204/Source/">Source</a></p>
+<p><a href="https://github.com/CelestinV/NF16-Toy-Library-and-Text-Indexing/tree/master/Project%204/Source">Source</a></p>
 
 <p><a href="./Project%204/Report/RapportTP4_MATHEY_VALLOIS_vfinal.pdf">Report</a></p>
 
