--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
 <hr>
 
-<p>Here is a practical exercise of the courses NF16 (Algorithms and data structures) in which we must implement do two projects in order to discover C, one little project of a toy library manager using linked lists and final project indexing of text using BST (Binary Search Tree).</p>
+<p>Here are practical exercises of the courses NF16 (Algorithms and data structures) in which we must implement do two projects in order to discover C, one little project of a toy library manager using linked lists and final project indexing of text using BST (Binary Search Tree).</p>
 
-<p>Ceci est un projet du cours de NF16 (Algorithms and data structures) dans lequel nous devons implémenter deux projets dans le but de découvrir C, un petit projet d'une ludothèque avec des listes chainées et un projet final indixant du texte en utilisant les ABR (Arbre Binaire de Recherche).</p>
+<p>Voici des exercices pratiques du cours de NF16 (Algorithms and data structures) dans lequel nous devons implémenter deux projets dans le but de découvrir C, un petit projet d'une ludothèque avec des listes chainées et un projet final indixant du texte en utilisant les ABR (Arbre Binaire de Recherche).</p>
 
 <hr>
 
