--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h1>
 <a id="nf16-toy-library-and-text-indexing" class="anchor" href="#nf16-toy-library-and-text-indexing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NF16-Toy-Library-and-Text-Indexing</h1>
 
-<p>Author :  Célestin VALLOIS &amp; Alexis Mathey (Université de Technologie de Compiègne)</p>
+<p>Authors :  Célestin VALLOIS &amp; Alexis Mathey (Université de Technologie de Compiègne)</p>
 
 <p>Date : Fall 2014</p>
 
